--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -19,15 +19,26 @@ $font-color-var-name: #77faff;
 $font-color-var: #cd6dfa;
 $font-color-other-var: #e99287;
 //* -------------------------------- [Color] -----------------------------------
-$active: #ff073a;
-$second-color: #0e0e0e;
+$neon-green: rgb(57, 255, 20);
+$neon-fuchsia: rgb(254, 89, 194);
+$neon-pink: rgb(254, 1, 154);
+$neon-red: rgb(255, 7, 58);
+$neon-blue: rgb(4, 217, 255);
+$neon-electric: rgb(125, 249, 255);
+$neon-blue-dark: rgb(85, 85, 255);
+$neon-purple: rgb(188, 19, 254);
+$neon-carrot: rgb(255, 163, 67);
+$neon-yellow: rgb(255, 234, 25);
+$laser-lemon: rgb(254, 254, 34);
+$luminescent-red: rgb(248, 0, 0);
+$luminescent-orange: rgb(255, 164, 32);
+$liquid-neon: rgb(200, 255, 0);
+$electric-lime: #ccff00;
+
+$black-color: #0e0e0e;
 $gray: #999999;
-$yellow: #e8e341;
 $orange: #f67438;
 $darkcyan: darkcyan;
-$color-neon: #04d9ff;
-$color-electric: #7df9ff;
-$text-color: #000000;
 $border-color: rgb(42, 53, 20);
 
 //* ---------------------------- [Other colors] --------------------------------
