--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -61,7 +61,7 @@
 // todo --------------------------- Assets -------------------------------------
 @import 'assets/burger-bottom';
 // todo --------------------------- layout -------------------------------------
-// @import 'layout/bem-block';
+@import 'layouts/bem-block';
 @import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
