--- a/#src/scss/section/section-mainslide.scss
+++ b/#src/scss/section/section-mainslide.scss
@@ -89,7 +89,7 @@
 			weight: 700;
 		}
 		span {
-			color: $active;
+			color: $neon-red;
 		}
 	}
 
@@ -98,7 +98,7 @@
 		opacity: 0;
 		transition: all 0.9s ease-in-out;
 		text-align: center;
-		text-shadow: 1px 1px 7px #000;
+		text-shadow: 2px 2px 10px #000000;
 	}
 
 	// .main-slide__slide-image
