--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -1,5 +1,4 @@
 .services {
-	text-shadow: 2px 2px 10px #000;
 	position: relative;
 
 	// .services__body
@@ -14,54 +13,67 @@
 	// .services__title
 	&__title {
 		position: relative;
-		filter: $filter;
+		display: inline;
 		padding: 0 5rem 2rem;
+		opacity: 0;
+		font: {
+			family: 'aa_neon', serif;
+			size: 7.5rem;
+			weight: normal;
+		}
+		text-align: center;
+		line-height: 100%;
+		letter-spacing: 0;
+		color: $neon-blue;
+		z-index: 9;
+
+		perspective-origin: 45% 320%;
+		transform-style: preserve-3d;
+		perspective: 100px;
+		filter: $filter;
+		//! ------------------------------------------------------------------------
+		transform: translateY(100%);
+		transition:
+			opacity 0.9s,
+			transform 0.9s;
+		&.visible {
+			opacity: 1;
+			transform: translateY(0) !important;
+		}
+		//! ------------------------------------------------------------------------
 		&::before {
-			// transform: translate(0, 50%);
 			content: '';
 			width: 100%;
 			height: 70%;
+			position: absolute;
 			top: 0;
 			left: 0;
-			position: absolute;
-			border-left: 3px #fe59c2;
-			border-right: 3px #fe59c2;
-			border-bottom: 3px #fe59c2;
-			border-style: none solid solid;
+			z-index: -1;
+			border-radius: 50%;
+			@extend .gradient-title;
 		}
 
 		&:nth-child(1) {
-			margin-top: -60px;
+			margin: -6rem 0 6rem;
+
 			&::before {
 				transform: translate(0, 58%);
 			}
-		}
+			&::after {
+				content: 'наши услуги';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 70%;
+				font: {
+					weight: 900;
+				}
 
-		&:nth-child(3) {
-			&::before {
-				transform: translate(0, 58%);
+				transform: rotateX(15deg) translateZ(-11px);
+				@extend .shadow-after;
 			}
-			font-family: 'Roboto', serif;
-			font-size: 30px;
 		}
-		display: inline;
-		font-size: 75px;
-		text-align: center;
-		line-height: 100%;
-		// color: $color-neon;
-		text-transform: uppercase;
-		font-family: 'aa_neon', serif;
-		letter-spacing: 0;
-
-		background: #04d9ff 100%;
-		// filter: drop-shadow(5px 8px 15px #04d9ff);
-
-		// background: linear-gradient(45deg, #0b2349 33%, #0d61bc 66%, #8aa9d6);
-		background-clip: text;
-		-webkit-text-fill-color: transparent;
-		color: $color-neon;
-		// display: table;
-		// margin: 20px auto;
 	}
 
 	// .services__content
@@ -90,10 +102,6 @@
 	z-index: 1;
 	width: 100vw;
 	height: 100%;
-
-	// @extend .gradient-header;
-	// @extend .gradient;
-
 	background-size: 100% 200%;
 
 	// .parallax__image
@@ -127,16 +135,41 @@
 		height: 30rem;
 		position: relative;
 		width: 20%;
-		position: relative;
-		transition: all 0.5s ease-in-out;
+		// transition: all 0.5s ease-in-out;
 		&:hover {
 			.content-box__image {
 				scale: 1.01;
 				box-shadow: $boxShadow;
 			}
+
 			.content-box__bg-img {
 				transform: translateY(0);
 				opacity: 1;
+			}
+		}
+		&.line {
+			&:nth-child(1) {
+				// transform: translateX(552px);
+			}
+			&:nth-child(2) {
+				position: relative;
+				// transform: translateX(277px);
+				border: 1px solid #fff;
+			}
+			&:nth-child(3) {
+				position: relative;
+				border: 1px solid #fff;
+			}
+			&:nth-child(4) {
+				position: relative;
+				z-index: 9;
+				// transform: translateX(-280px);
+				border: 1px solid #fff;
+			}
+			&:nth-child(5) {
+				position: relative;
+				// transform: translateX(-556px);
+				border: 1px solid #fff;
 			}
 		}
 	}
@@ -150,15 +183,17 @@
 		filter: $filter;
 
 		img {
-			// position: relative;
 			top: 0;
 			left: 0;
 			z-index: 1;
-			// opacity: 0.3;
 			width: 100%;
 			height: 30rem;
 			object-fit: cover;
 			object-position: center;
+			transition: scale 0.4s ease-in-out;
+			&:hover {
+				scale: 1.1;
+			}
 		}
 		svg {
 			pointer-events: none;
@@ -186,7 +221,7 @@
 			max-width: 195px;
 			path {
 				opacity: 0;
-				stroke: #007488;
+				stroke: $electric-lime;
 			}
 		}
 	}
@@ -194,21 +229,99 @@
 	// .content-box__text
 	&__text {
 		position: absolute;
+		font-family: 'aa_neon', Helvetica, sans-serif;
 		left: 0;
 		right: 0;
 		font-size: 2.4rem;
 		text-align: center;
-		bottom: 3rem;
+		bottom: 1rem;
+		font-weight: normal;
 		text-shadow: 0 0 7px #000;
-		color: #ccff00;
+		display: flex;
+		justify-content: center;
+		color: $liquid-neon;
+		svg {
+			height: 40px;
+			path {
+				// opacity: 1;
+				fill: url(#grad);
+				stroke: currentColor;
+				stroke-width: 1px;
+			}
+		}
 	}
 }
 // -----------------------------------------------------------------------------
 
 .offer-container {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 2rem;
+	@include flex-align-center-justify-space-between;
+	flex-direction: column;
+	// .offer-container__title
+	&__title {
+		position: relative;
+		display: inline;
+		padding: 0 5rem 2rem;
+		margin-bottom: 6rem;
+		font: {
+			family: 'aa_neon', serif;
+			size: 3rem;
+			weight: normal;
+		}
+		text-align: center;
+		line-height: 100%;
+		letter-spacing: 0;
+		color: $neon-blue;
+		z-index: 9;
+		opacity: 0;
+
+		perspective-origin: 45% 320%;
+		transform-style: preserve-3d;
+		perspective: 100px;
+		filter: $filter;
+		//! ------------------------------------------------------------------------
+		transform: translateY(100%);
+		transition:
+			opacity 0.9s,
+			transform 0.9s;
+		&.visible {
+			opacity: 1;
+			transform: translateY(0) !important;
+		}
+		//! ------------------------------------------------------------------------
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: -1;
+			border-radius: 50%;
+			transform: translate(0, 10%);
+			@extend .gradient-title;
+		}
+		&::after {
+			content: 'специальное предложение';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 70%;
+			font: {
+				weight: 900;
+			}
+			transform: rotateX(15deg) translateZ(-5px);
+			@extend .shadow-after;
+		}
+	}
+
+	// .offer-container__body
+	&__body {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 2rem;
+	}
 
 	// .offer-container__column
 	&__column {
@@ -237,8 +350,9 @@
 	&__link {
 		cursor: pointer;
 	}
+
 	// .offer-container__title
-	&__title {
+	&__title-box {
 		color: ghostwhite;
 		margin-bottom: 2rem;
 		@include flex-align-center-justify-space-between;
@@ -247,11 +361,10 @@
 			font-weight: 100;
 		}
 		span {
-			font-size: 2.2rem;
+			font-size: 2.4rem;
 			&:nth-child(2) {
 				display: inline-flex;
 				align-items: center;
-				font-size: 1.6rem;
 
 				i {
 					margin-left: 1rem;
