--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -10,12 +10,15 @@ html(lang="ru")
 		block link
 			link(rel="icon" type="image/icon" href="@@webRoot/img/icons/icon-logo.ico")
 			link(rel="stylesheet" type="text/css" href="@@webRoot/css/style.min.css" ) 
-		block script
-			//- script(defer="defer" type="text/javascript" src="@@webRoot/js/ScrollToPlugin.min.js")
+		block script 
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/gsap.min.js")
 			script(defer="defer" type="text/javascript" src="@@webRoot/js/ScrollTrigger.min.js")
-			script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appreact.min.js") 
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/ScrollSmoother.min.js") 
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/SplitText.min.js")
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/chroma.min.js")
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appreact.min.js")
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/app.min.js") 
 			script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
-			script(defer="defer" type="text/javascript" src="@@webRoot/js/app.min.js")
 		block title
 		- var text
 			title #{text}
