--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -33,7 +33,7 @@ $laser-lemon: rgb(254, 254, 34);
 $luminescent-red: rgb(248, 0, 0);
 $luminescent-orange: rgb(255, 164, 32);
 $liquid-neon: rgb(200, 255, 0);
-$electric-lime: #ccff00;
+$electric-lime: rgb(204, 255, 0);
 
 $black-color: #0e0e0e;
 $gray: #999999;
