--- a/#src/scss/section/section-mainslide.scss
+++ b/#src/scss/section/section-mainslide.scss
@@ -58,6 +58,7 @@
 			}
 		}
 	}
+
 	// .main-slide__body
 	&__body {
 		overflow: hidden;
@@ -84,6 +85,7 @@
 		opacity: 0;
 		transition: all 0.9s ease-in-out;
 		text-shadow: 1px 1px 7pt #000;
+		text-align: center;
 		font: {
 			size: 3.6rem;
 			weight: 700;
@@ -97,8 +99,9 @@
 	&__text {
 		opacity: 0;
 		transition: all 0.9s ease-in-out;
-		text-align: center;
-		text-shadow: 2px 2px 10px #000000;
+		text-align: justify;
+		text-indent: 4rem;
+		text-shadow: 0px 0px 5px $neon-blue-dark;
 	}
 
 	// .main-slide__slide-image
