--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -59,7 +59,7 @@
 }
 
 // todo --------------------------- Assets -------------------------------------
-@import 'assets/burger-bottom';
+@import 'assets/burger-button';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
 @import 'layouts/header';
