--- a/#src/scss/core/_extend.scss
+++ b/#src/scss/core/_extend.scss
@@ -30,13 +30,7 @@
 }
 
 .liner-gradient-box {
-	background: linear-gradient(
-		45deg,
-		// #47208a,
-		#10133a 55%,
-		#47208a73 10%,
-		#10133a
-	);
+	background: linear-gradient(45deg, #10133a 55%, #47208a73 10%, #10133a);
 }
 
 .text-gradient {
