--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -35,7 +35,7 @@ $luminescent-orange: rgb(255, 164, 32);
 $liquid-neon: rgb(200, 255, 0);
 $electric-lime: rgb(204, 255, 0);
 
-$black-color: #0e0e0e;
+$black-color: #1c153f;
 $gray: #999999;
 $orange: #f67438;
 $darkcyan: darkcyan;
