--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -16,8 +16,8 @@ html(lang="ru")
 			//- script(defer="defer" type="text/javascript" src="@@webRoot/js/ScrollSmoother.min.js") 
 			//- script(defer="defer" type="text/javascript" src="@@webRoot/js/SplitText.min.js")
 			//- script(defer="defer" type="text/javascript" src="@@webRoot/js/chroma.min.js")
-			script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appreact.min.js")
-			script(defer="defer" type="text/javascript" src="@@webRoot/js/app.min.js") 
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/app/app.min.js")
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/animated.min.js") 
 			script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js") 
 		block title
 		- var text
@@ -28,16 +28,15 @@ html(lang="ru")
 		include ../includes/mixins 
 		div(class="wrapper")
 			block page
-			.page
-				._header#home
-					._header-wrapper
-					._fade-in.bp-1
-				._main-content
-					block main-content 
-
-				block footer 
-						//- footer._footer
-				block modal
+				.page 
+					block header 
+						header._header#home
+							._header-wrapper
+							._fade-in.bp-1 
+					main._main-content
+						block main-content 
+							block section
+							block footer 
 
 
 
