--- a/#src/scss/layouts/bem-block.scss
+++ b/#src/scss/layouts/bem-block.scss
@@ -5,57 +5,49 @@
 	transition: all 0.5s ease-in-out;
 }
 
-.terminal ._collapse:not(._show) {
-	flex: 0 1 0;
-}
-
-.bgblurs-box {
-	position: absolute;
-	width: 50%;
-	height: 0;
-	top: 0%;
-	bottom: 0;
-	right: 0;
-	min-height: 100%;
-	z-index: 0;
-	opacity: 0;
-
-	@include _690 {
-		width: 100%;
+.community {
+	// .community__icons
+	&__icons {
+		@include flex-align-center;
 	}
 
-	// .bg-blurs__top
-	&__top {
-		position: absolute;
-		top: 15%;
-		width: 40rem;
-		height: 44.2rem;
-		transform: rotate(-94.305deg);
-		fill: #00717e;
-		opacity: 0.5;
-		filter: blur(87px);
+	// .community__title
+	&__title {
+		font-size: 1.2rem;
+		span {
+			display: inline-block;
+			padding: 0 0.5rem 0 1rem;
+			margin-right: 1rem;
+			background: #332764;
+			border-radius: 4px;
+			line-height: 170%;
+		}
 
-		@include _min-690 {
-			top: 10%;
-			left: -35%;
+		a {
+			color: $gray;
+			&:hover {
+				color: $neon-blue;
+			}
 		}
 	}
+	// .community__icon
+	&__icon {
+		background: $electric-lime;
+		font-size: 2.2rem;
+		width: 4.2rem;
+		height: 4.2rem;
+		border-radius: 50%;
+		color: $black-color;
+		overflow: hidden;
+		transition: all 0.5s ease-in-out;
 
-	// .bg-blurs__bottom
-	&__bottom {
-		position: absolute;
-		top: 40%;
-		left: 20%;
-		width: 40rem;
-		height: 44.2rem;
-		transform: rotate(13.508deg);
-		fill: #4d5bce;
-		opacity: 0.5;
-		filter: blur(87px);
+		&:not(:last-child) {
+			margin-right: 1rem;
+		}
 
-		@include _min-690 {
-			top: 20%;
-			left: 15%;
+		&:hover {
+			background: $black-color;
+			color: $electric-lime;
 		}
 	}
 }
